--- a/AnteproyectoV2.tex
+++ b/AnteproyectoV2.tex
@@ -128,21 +128,21 @@ El estudio es factible tanto técnicamente como económicamente, ya que se dispo
 \renewcommand{\refname}{\centerline{\normalsize REFERENCIAS BIBLIOGRÁFICAS}}
 
 \begin{thebibliography}{10}
-\bibitem{SOS}\textbf{SOS Telemedicina.} \textcolor{blue}{\small{\url{http://sostelemedicina.ucv.ve}}}. Consulta: 5/12/2016.
+\bibitem{SOS} SOS Telemedicina. \textcolor{blue}{\small{\url{http://sostelemedicina.ucv.ve}}}. Consulta: 5/12/2016.
 
-\bibitem{VoIP}\textbf{Unidad de Control Multipunto para Videoconferencia basada en Software Libre integrado a la Red VoIP de Argentina.}\textcolor{blue}{\small{\url{http://tical2014.redclara.net/doc/ptaciones/Martes/A3/2-MARIANO_MARTIN-TICAL2014-v2.pdf}}}. Consulta: 7/12/2016.
+\bibitem{VoIP} Unidad de Control Multipunto para Videoconferencia basada en Software Libre integrado a la Red VoIP de Argentina. \textcolor{blue}{\small{\url{http://tical2014.redclara.net/doc/ptaciones/Martes/A3/2-MARIANO_MARTIN-TICAL2014-v2.pdf}}}. Consulta: 7/12/2016.
 
-\bibitem{inacap}\textbf{Sistema de Multiconferencia basado en Software Libre.} \textcolor{blue}{\small {\url{http://docshare.tips/embed/sistema-de-multiconferencia-basado-en-software-librepdf_574cdf6eb6d87f032c8b572d.html?sp=1}}}. Consulta: 7/12/2016.
+\bibitem{inacap} Sistema de Multiconferencia basado en Software Libre. \textcolor{blue}{\small {\url{http://docshare.tips/embed/sistema-de-multiconferencia-basado-en-software-librepdf_574cdf6eb6d87f032c8b572d.html?sp=1}}}. Consulta: 7/12/2016.
 
-\bibitem{MCUAD}\textbf{MCU para multiconferencias en alta definición.} \textcolor{blue}{\small{\url{https://upcommons.upc.edu/bitstream/handle/2099.1/3775/55806-1.pdf}}}. Consulta: 7/12/2016.
+\bibitem{MCUAD} MCU para multiconferencias en alta definición. \textcolor{blue}{\small{\url{https://upcommons.upc.edu/bitstream/handle/2099.1/3775/55806-1.pdf}}}. Consulta: 7/12/2016.
 
-\bibitem{Arrechedera}\textbf{SOS Telemedicina: La experiencia de la Universidad Central de Venezuela.} \textcolor{blue}{\small {\url{http://www.bioline.org.br/pdf?va13025}}}. Consulta: 9/12/2016.
+\bibitem{Arrechedera} SOS Telemedicina: La experiencia de la Universidad Central de Venezuela. \textcolor{blue}{\small {\url{http://www.bioline.org.br/pdf?va13025}}}. Consulta: 9/12/2016.
 
-\bibitem{caibco}\textbf{Proyecto SOS Telemedicina para Venezuela.} \textcolor{blue}{\small {\url{http://sos.ucv.ve/SOSTelemedicina.pdf}}}. Consulta: 13/12/2016.
+\bibitem{caibco} Proyecto SOS Telemedicina para Venezuela. \textcolor{blue}{\small {\url{http://sos.ucv.ve/SOSTelemedicina.pdf}}}. Consulta: 13/12/2016.
 
-\bibitem{Max}\textsc{Ruiz, M.} (2011). \textit{Implementación de una unidad de control multipunto (MCU) basado en código abierto sobre la red de datos de la Universidad Central de Venezuela.} (Pregrado). UCV. Caracas. 
+\bibitem{Max}\textsc{Ruiz, M.} (2011). Implementación de una unidad de control multipunto (MCU) basado en código abierto sobre la red de datos de la Universidad Central de Venezuela. (Pregrado). UCV. Caracas. 
 
-\bibitem{Sarif}\textsc{López, S.} (2011). \textit{Desarrollo e implementación de un gateway basado en código abierto sobre la red de datos de la Universidad Central de Venezuela.} (Pregrado). UCV. Caracas. 
+\bibitem{Sarif}\textsc{López, S.} (2011). Desarrollo e implementación de un gateway basado en código abierto sobre la red de datos de la Universidad Central de Venezuela. (Pregrado). UCV. Caracas.
 \end{thebibliography}
 
 
