--- a/AnteproyectoV2.tex
+++ b/AnteproyectoV2.tex
@@ -36,13 +36,13 @@ Estudio para la implementación del protocolo H.239 en una Unidad de Control Mul
 
 \centerline{\textbf{INTRODUCCIÓN}}
 
-El gran avance que ha tenido el desarrollo de las Tecnologías de la Información y la Comunicación en las últimas décadas, ha permitido que su aplicación en el sector salud sea cada vez frecuente, logrando importantes mejorías en la atención al paciente y en la calidad de los servicios prestados, así como una significativa reducción de los costos  operativos y administrativos.
+El gran avance que ha tenido el desarrollo de las Tecnologías de la Información y la Comunicación en las últimas décadas, ha permitido que su aplicación en el sector salud sea cada vez más frecuente, logrando importantes mejorías en la atención al paciente y en la calidad de los servicios prestados, así como una significativa reducción de los costos  operativos y administrativos.
 
 En Venezuela, el uso de TIC\footnote{TIC. \emph{Tecnologías de la Información y la Comunicación}.} en la salud se remonta a la década de los 90, principalmente a nivel de investigación en diversas entidades académicas y centros universitarios orientados hacia las  áreas de las telecomunicaciones y telemedicina, desarrollo de software para registro clínico, procesamiento de imágenes médicas y aplicaciones web.
 
 Uno de los proyectos de gran importancia para la comunidad médica del país es SOS\footnote{SOS. \emph{Segunda Opción en Salud}.} Telemedicina para Venezuela, resultado del esfuerzo y continuo trabajo que data desde 1996 y es liderado por el CAIBCO\footnote{CAIBCO. \emph{Centro de Análisis de Imágenes Biomédicas Computarizadas}.} en la Facultad de Medicina de la UCV, con el objetivo fundamental de mejorar la calidad resolutiva del servicio público nacional de salud mediante el diseño, desarrollo, implementación y puesta en marcha de un sistema de telemedicina que conecte en red a centros remotos de atención primaria de salud con especialistas de la Universidad Central de Venezuela y otras universidades nacionales e internacionales; dedicadas a la investigación, a la transferencia de tecnologías, al equipamiento y soporte de la plataforma tecnológica, a la capacitación del personal de la salud, a la evaluación e intercambio de opiniones sobre casos médicos y sus posibles soluciones. 
 
-Es importante señalar, que en más de 10 años de experiencias, con la colaboración de estudiantes de pregado y postgrado, profesores, personal administrativo, profesionales y expertos de diversas facultades y dependencias adscritas a la UCV, el proyecto se ha consolidado satisfactoriamente y en la actualidad se cuenta con una red en expansión, de arquitectura abierta con aplicaciones propias desarrolladas tanto en software libre como en software propietario de importantes empresas (HP, Cisco, Microsoft, entre otras); que manejan grandes bases de datos alojados en servidores, protocolos de comunicación, estándares de interoperabilidad, lenguajes de programación, para ofrecer soluciones tecnológicas de teleconsulta, telediagnóstico y teleducación a través de videoconferencias, acceso a distinto portales web con temáticas sobre la salud, acceso al historial clínico electrónico, entre otras. 
+Es importante señalar, que en más de 10 años de experiencias, con la colaboración de estudiantes de pregado y postgrado, profesores, personal administrativo, profesionales y expertos de diversas facultades y dependencias adscritas a la UCV, el proyecto se ha consolidado satisfactoriamente y en la actualidad se cuenta con una red en expansión, de arquitectura abierta con aplicaciones propias desarrolladas tanto en software libre como en software propietario de importantes empresas (HP, Cisco, Microsoft, entre otras); que manejan grandes bases de datos alojados en servidores, protocolos de comunicación, estándares de interoperabilidad, lenguajes de programación, para ofrecer soluciones tecnológicas de teleconsulta, telediagnóstico y teleducación a través de videoconferencias, acceso a distintos portales web con temáticas sobre la salud, acceso al historial clínico electrónico, entre otras. 
 
 La red y sus tecnologías son impulsadas a través de varias instancias relacionadas al proyecto, siendo una de ellas, el Centro de Informática de Medicina, donde se encargan de mantener operativos y funcionales los equipos que conforman la plataforma a través de correctas políticas de uso y de seguridad. 
    
@@ -53,7 +53,7 @@ Debido a su labor, es como surge la necesidad de realizar este trabajo, ya que a
 
 Ante tal situación, el Departamento de Telecomunicaciones del CIM\footnote{CIM. \emph{Centro de Informática de Medicina}.} optó por implementar una Unidad de Control Multipunto software libre y código abierto, la cual se encuentra alojado en un servidor de la Facultad de Medicina en el Data Center de la UCV; y maneja la mayoría de los protocolos de comunicación para ofrecer servicio de videoconferencia. Sin embargo, es importante mencionar que una de las características que no presenta, es la de incluir en el stack de protocolos al H.239, principalmente responsable en la gestión de compartición de datos sobre vídeo (\emph{dual stream}) en una sesión de videoconferencia, condición que afecta de manera cualitativamente, la calidad del servicio que se desea ofrecer.
 
-Por esto es necesario hacer un estudio que permita la adición del protocolo H.239 a esta MCU; sin embargo antes hay que plantearse las siguiente interrogantes: ¿Es la MCU de código abierto capaz de soportar al protocolo H.239?, ¿Existe otra alternativa que solucione este problema?.        
+Por esto es necesario hacer un estudio que permita la adición del protocolo H.239 a esta MCU; sin embargo antes hay que plantearse las siguientes interrogantes: ¿Es la MCU de código abierto capaz de soportar al protocolo H.239?, ¿Existe otra alternativa que solucione este problema?.        
 
 \centerline{\textbf{JUSTIFICACIÓN}}
 
