--- a/AnteproyectoV2.tex
+++ b/AnteproyectoV2.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt,letterpaper]{article}
+\usepackage{times}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \renewcommand{\baselinestretch}{1.5} %Interlineado 
@@ -38,7 +39,7 @@ Estudio para la implementación del protocolo H.239 en una Unidad de Control Mul
 
 El gran avance que ha tenido el desarrollo de las Tecnologías de la Información y la Comunicación en las últimas décadas, ha permitido que su aplicación en el sector salud sea cada vez más frecuente, logrando importantes mejorías en la atención al paciente y en la calidad de los servicios prestados, así como una significativa reducción de los costos  operativos y administrativos.
 
-En Venezuela, el uso de TIC\footnote{TIC. \emph{Tecnologías de la Información y la Comunicación}.} en la salud se remonta a la década de los 90, principalmente a nivel de investigación en diversas entidades académicas y centros universitarios orientados hacia las  áreas de las telecomunicaciones y telemedicina, desarrollo de software para registro clínico, procesamiento de imágenes médicas y aplicaciones web.
+En Venezuela, el uso de TIC\footnote{TIC. \emph{Tecnologías de la Información y la Comunicación}.} en la salud se remonta a la década de los 90, específicamente en diversas instituciones académicas y centros universitarios orientados hacia la investigación en las áreas de las telecomunicaciones y telemedicina, desarrollo de software y aplicaciones médicas, procesamiento de imágenes médicas y aplicaciones web.
 
 Uno de los proyectos de gran importancia para la comunidad médica del país es SOS\footnote{SOS. \emph{Segunda Opción en Salud}.} Telemedicina para Venezuela, resultado del esfuerzo y continuo trabajo que data desde 1996 y es liderado por el CAIBCO\footnote{CAIBCO. \emph{Centro de Análisis de Imágenes Biomédicas Computarizadas}.} en la Facultad de Medicina de la UCV, con el objetivo fundamental de mejorar la calidad resolutiva del servicio público nacional de salud mediante el diseño, desarrollo, implementación y puesta en marcha de un sistema de telemedicina que conecte en red a centros remotos de atención primaria de salud con especialistas de la Universidad Central de Venezuela y otras universidades nacionales e internacionales; dedicadas a la investigación, a la transferencia de tecnologías, al equipamiento y soporte de la plataforma tecnológica, a la capacitación del personal de la salud, a la evaluación e intercambio de opiniones sobre casos médicos y sus posibles soluciones. 
 
@@ -49,7 +50,7 @@ La red y sus tecnologías son impulsadas a través de varias instancias relacion
 \centerline{\textbf{PLANTEAMIENTO DEL PROBLEMA}}
 
 
-Debido a su labor, es como surge la necesidad de realizar este trabajo, ya que actualmente uno de los equipos de la plataforma, específicamente la Unidad de Control Multipunto (MCU)\footnote{MCU. \emph{Multipunt Control Unit, por sus siglas en inglés.}}, equipo que forma parte del sistema de videoconferencia se encuentra inhabilitado.
+Es debido a su labor como surge la necesidad de realizar este trabajo, ya que actualmente uno de los equipos de la plataforma, específicamente la Unidad de Control Multipunto (MCU)\footnote{MCU. \emph{Multipunt Control Unit, por sus siglas en inglés.}}, y que que forma parte del sistema de videoconferencia se encuentra inhabilitado.
 
 Ante tal situación, el Departamento de Telecomunicaciones del CIM\footnote{CIM. \emph{Centro de Informática de Medicina}.} optó por implementar una Unidad de Control Multipunto software libre y código abierto, la cual se encuentra alojado en un servidor de la Facultad de Medicina en el Data Center de la UCV; y maneja la mayoría de los protocolos de comunicación para ofrecer servicio de videoconferencia. Sin embargo, es importante mencionar que una de las características que no presenta, es la de incluir en el stack de protocolos al H.239, principalmente responsable en la gestión de compartición de datos sobre vídeo (\emph{dual stream}) en una sesión de videoconferencia, condición que afecta de manera cualitativamente, la calidad del servicio que se desea ofrecer.
 
