--- a/AnteproyectoV2.tex
+++ b/AnteproyectoV2.tex
@@ -50,9 +50,9 @@ La red y sus tecnologías son impulsadas a través de varias instancias relacion
 \centerline{\textbf{PLANTEAMIENTO DEL PROBLEMA}}
 
 
-Es debido a su labor como surge la necesidad de realizar este trabajo, ya que actualmente uno de los equipos de la plataforma, específicamente la Unidad de Control Multipunto (MCU)\footnote{MCU. \emph{Multipunt Control Unit, por sus siglas en inglés.}}, y que que forma parte del sistema de videoconferencia se encuentra inhabilitado.
+Es debido a su labor como surge la necesidad de realizar este trabajo, ya que actualmente uno de los equipos de la plataforma, específicamente la Unidad de Control Multipunto (MCU)\footnote{MCU. \emph{Multipunt Control Unit, por sus siglas en inglés.}}, y que forma parte del sistema de videoconferencia se encuentra inhabilitado.
 
-Ante tal situación, el Departamento de Telecomunicaciones del CIM\footnote{CIM. \emph{Centro de Informática de Medicina}.} optó por implementar una Unidad de Control Multipunto software libre y código abierto, la cual se encuentra alojado en un servidor de la Facultad de Medicina en el Data Center de la UCV; y maneja la mayoría de los protocolos de comunicación para ofrecer servicio de videoconferencia. Sin embargo, es importante mencionar que una de las características que no presenta, es la de incluir en el stack de protocolos al H.239, principalmente responsable en la gestión de compartición de datos sobre vídeo (\emph{dual stream}) en una sesión de videoconferencia, condición que afecta de manera cualitativamente, la calidad del servicio que se desea ofrecer.
+Ante tal situación, el Departamento de Telecomunicaciones del CIM\footnote{CIM. \emph{Centro de Informática de Medicina}.} optó por implementar una Unidad de Control Multipunto software libre y código abierto, la cual se encuentra alojada en un servidor de la Facultad de Medicina en el Data Center de la UCV; y maneja la mayoría de los protocolos de comunicación para ofrecer servicio de videoconferencia. Sin embargo, es importante mencionar que una de las características que no presenta, es la de incluir en el stack de protocolos al H.239, principalmente responsable en la gestión de compartición de datos sobre vídeo (\emph{dual stream}) en una sesión de videoconferencia, condición que afecta de manera cualitativamente, la calidad del servicio que se desea ofrecer.
 
 Por esto es necesario hacer un estudio que permita la adición del protocolo H.239 a esta MCU; sin embargo antes hay que plantearse las siguientes interrogantes: ¿Es la MCU de código abierto capaz de soportar al protocolo H.239?, ¿Existe otra alternativa que solucione este problema?.        
 
