--- a/AnteproyectoV2.tex
+++ b/AnteproyectoV2.tex
@@ -39,7 +39,7 @@ Estudio para la implementación del protocolo H.239 en una Unidad de Control Mul
 
 El gran avance que ha tenido el desarrollo de las Tecnologías de la Información y la Comunicación en las últimas décadas, ha permitido que su aplicación en el sector salud sea cada vez más frecuente, logrando importantes mejorías en la atención al paciente y en la calidad de los servicios prestados, así como una significativa reducción de los costos  operativos y administrativos.
 
-En Venezuela, el uso de TIC\footnote{TIC. \emph{Tecnologías de la Información y la Comunicación}.} en la salud se remonta a la década de los 90, específicamente en diversas instituciones académicas y centros universitarios orientados hacia la investigación en las áreas de las telecomunicaciones y telemedicina, desarrollo de software y aplicaciones médicas, procesamiento de imágenes médicas y aplicaciones web.
+En Venezuela, el uso de TIC\footnote{TIC. \emph{Tecnologías de la Información y la Comunicación}.} en la salud se remonta a la década de los 90, específicamente en diversas instituciones académicas y centros universitarios dedicados a la investigación en las áreas de las telecomunicaciones y telemedicina, desarrollo de software, procesamiento de imágenes médicas y aplicaciones web con fines educativos sobre medicina.
 
 Uno de los proyectos de gran importancia para la comunidad médica del país es SOS\footnote{SOS. \emph{Segunda Opción en Salud}.} Telemedicina para Venezuela, resultado del esfuerzo y continuo trabajo que data desde 1996 y es liderado por el CAIBCO\footnote{CAIBCO. \emph{Centro de Análisis de Imágenes Biomédicas Computarizadas}.} en la Facultad de Medicina de la UCV, con el objetivo fundamental de mejorar la calidad resolutiva del servicio público nacional de salud mediante el diseño, desarrollo, implementación y puesta en marcha de un sistema de telemedicina que conecte en red a centros remotos de atención primaria de salud con especialistas de la Universidad Central de Venezuela y otras universidades nacionales e internacionales; dedicadas a la investigación, a la transferencia de tecnologías, al equipamiento y soporte de la plataforma tecnológica, a la capacitación del personal de la salud, a la evaluación e intercambio de opiniones sobre casos médicos y sus posibles soluciones. 
 
